--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -37,7 +37,7 @@
           type="email"
           id="username"
           name="_username"
-          value=""                     {# champ toujours vide #}
+          value=""
           autocomplete="off"
           required
           autofocus
@@ -71,11 +71,18 @@
       <button
         type="submit"
         class="mt-2 inline-flex w-full justify-center items-center rounded-full bg-cyan-500
-               px-6 py-2.5 text-sm font-semibold text-slate-950 shadow-lg shadow-cyan-500/30
+               px-6 py-2 text-sm font-semibold text-slate-950 shadow-lg shadow-cyan-500/30
                hover:bg-cyan-400 transition"
       >
         Se connecter
       </button>
+
+      <p class="mt-3 text-center text-xs text-slate-400">
+        <a href="{{ path('app_forgot_password_request') }}"
+           class="text-cyan-300 hover:text-cyan-200">
+          Mot de passe oublié ?
+        </a>
+      </p>
     </form>
   </div>
 </section>
